Fix texture coordinates for the inner walls of ChimneyRoof